--- a/css/template.less
+++ b/css/template.less
@@ -164,3 +164,11 @@ div.view {
 /*    height: 468px;
     padding-left: 13px;*/
 }
+
+.listas_asignacion{
+    border-radius: 4px 4px 4px 4px; 
+    -moz-border-radius: 4px 4px 4px 4px; 
+    -webkit-border-radius: 4px 4px 4px 4px; 
+    border: 3px solid #858285; 
+    padding: 5px;
+}
