--- a/css/template.less
+++ b/css/template.less
@@ -137,7 +137,7 @@ body{
 
 #content {
     margin-bottom: 3em;
-    
+
 }
 .seccion-1{
     background-image: url(../images/iconos/linea2.png);
@@ -160,9 +160,9 @@ div.view {
 }
 
 #menu-lateral{
-   
-/*    height: 468px;
-    padding-left: 13px;*/
+
+    /*    height: 468px;
+        padding-left: 13px;*/
 }
 
 .listas_asignacion{
@@ -171,4 +171,30 @@ div.view {
     -webkit-border-radius: 4px 4px 4px 4px; 
     border: 3px solid #858285; 
     padding: 5px;
+}
+
+
+.header-busquedas{
+    background-color: #005DC7;
+    border: medium none;
+    border-radius: 3px;
+    color: #FFFFFF;
+    display: block;
+    font-weight: bold;
+    margin-bottom: 4%;
+    margin-top: inherit;
+    padding: 6px;
+    text-align: center;
+    text-decoration: none;
+    width: 110%;
+}
+
+
+.fechas-busqueda {
+    padding-bottom: 14px;
+    padding-left: 17px;
+}
+
+.busquedas {
+    padding-top: 43px;
 }
