--- a/css/template.css
+++ b/css/template.css
@@ -15,75 +15,95 @@ body {
   font-size: 13px;
   font-weight: normal;
 }
-/* line 18, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000318}}
+/* line 17, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000317}}
+a {
+  color: #7B507B;
+}
+/* line 21, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000321}}
+h1 {
+  text-align: center;
+}
+/* line 25, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000325}}
+#logon-form,
+#pwdrcv-form {
+  margin: 3em;
+}
+/* line 30, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000330}}
 .grid-view .button-column {
   width: 53px !important;
 }
-/* line 23, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000323}}
+/* line 35, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000335}}
 #list-auth-items .row {
   margin-left: 5px;
 }
-/* line 27, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000327}}
+/* line 39, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000339}}
 .nav-tabs > li,
 .nav-pills > li {
   float: none !important;
 }
-/* line 32, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000332}}
-.navbar-inverse .navbar-inner {
-  padding-top: 13px;
-  background: url(../images/iconos/icono-fondo-menu.png) repeat;
-}
-/* line 37, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000337}}
-.navbar-inverse .brand {
-  background: url(../images/logo2.png) no-repeat;
-  padding-bottom: 44px;
-  padding-left: 117px;
-}
 /* line 44, /var/www/AppDocumental/css/template.less */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000344}}
+.navbar-inverse .navbar-inner {
+  background: url(../images/iconos/heaad.png) no-repeat;
+  background-size: auto auto;
+  border-color: #FFFFFF;
+}
+/* line 54, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000354}}
+.navbar-inverse .brand {
+  background-color: #7B507B;
+  margin: none;
+  position: absolute;
+  margin-left: 4em;
+  padding: 19px 16px 36px;
+}
+/* line 63, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000363}}
 .navbar .nav {
   height: 67px;
   margin-top: -13px;
+  margin-left: 22em;
 }
-/* line 49, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000349}}
+/* line 69, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000369}}
 .navbar .nav > li {
   display: block;
   height: 100%;
 }
-/* line 53, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000353}}
+/* line 73, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000373}}
 .navbar .nav > li > a {
   padding: 25px 16px 22px;
 }
-/* line 56, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000356}}
+/* line 76, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000376}}
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
   text-transform: uppercase;
   font: larger sans-serif;
   font-weight: 900;
 }
-/* line 61, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000361}}
+/* line 81, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000381}}
 .navbar .nav li a {
   color: whitesmoke;
 }
-/* line 64, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000364}}
+/* line 84, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000384}}
 .navbar .nav li.active a {
-  color: #005580;
-  background-color: #A3A3A3;
+  color: #7B507B;
+  background-color: #FFFFFF;
+  border-color: #FFFFFF;
   /* RGBa with 0.6 opacity */
-  background: rgba(38, 63, 69, 0.6);
 }
-/* line 71, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000371}}
+/* line 92, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000392}}
 .menu_ingreso.menu_entrar > a,
 .menu_salir > a,
 .menu_usuarios > a {
@@ -91,41 +111,56 @@ body {
   font: larger sans-serif;
   font-weight: normal !important;
 }
-/* line 76, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000376}}
+/* line 97, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000397}}
+.navbar-inverse .nav .active > a,
+.navbar-inverse .nav .active > a:hover,
+.navbar-inverse .nav .active > a:focus {
+  background-color: #FFFFFF;
+}
+/* line 101, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003101}}
+.navbar .nav > .active > a,
+.navbar .nav > .active > a:hover,
+.navbar .nav > .active > a:focus {
+  background-color: #FFFFFF;
+  color: #7B507B  ;
+}
+/* line 106, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003106}}
 .navbar .nav li.active {
   /* Fallback for web browsers that doesn't support RGBa */
 }
-/* line 81, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000381}}
+/* line 111, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003111}}
 .menu_entrar {
   padding-left: 28em;
-  padding-top: 11px !important;
+  padding-top: 27px !important;
 }
-/* line 86, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000386}}
+/* line 116, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003116}}
 .menu_salir {
-  padding-left: 16em;
-  padding-top: 11px !important;
+  padding-left: 11em;
+  padding-top: 23px !important;
 }
-/* line 90, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000390}}
+/* line 120, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003120}}
 .menu_usuarios {
   padding-left: 3em;
-  padding-top: 11px !important;
+  padding-top: 23px !important;
 }
-/* line 95, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000395}}
+/* line 125, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003125}}
 .breadcrumb {
   margin: 23px 0 20px;
 }
-/* line 99, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\0000399}}
+/* line 129, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003129}}
 #titulos-cabecera {
-  color: #0088CC;
+  color: #7B507B;
 }
-/* line 104, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003104}}
+/* line 134, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003134}}
 .linea-titulo div {
   background-image: url(../images/iconos/icono-linea1.png);
   background-repeat: no-repeat;
@@ -133,29 +168,29 @@ body {
   height: 4px;
   position: relative;
 }
-/* line 111, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003111}}
+/* line 141, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003141}}
 .linea-titulo hr {
   margin-top: -3px;
 }
-/* line 116, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003116}}
+/* line 146, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003146}}
 #lista-archivos {
   margin-top: -64px;
 }
-/* line 120, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003120}}
+/* line 150, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003150}}
 #lista-archivos .summary {
-  color: #0088CC;
+  color: #7B507B;
   font-weight: bold;
 }
-/* line 125, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003125}}
+/* line 155, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003155}}
 #page {
   border: none;
 }
-/* line 128, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003128}}
+/* line 158, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003158}}
 #footer {
   border: none;
   position: fixed;
@@ -166,43 +201,47 @@ body {
   background-color: #CDCDCD;
   font-weight: bold;
 }
-/* line 138, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003138}}
+/* line 168, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003168}}
 #content {
   margin-bottom: 3em;
+  padding: none;
+  padding-right: 2em;
 }
-/* line 142, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003142}}
+/* line 174, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003174}}
 .seccion-1 {
   background-image: url(../images/iconos/linea2.png);
   background-repeat: no-repeat;
   background-position: right top;
 }
-/* line 148, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003148}}
+/* line 180, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003180}}
 div.view {
   border: none;
 }
-/* line 152, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003152}}
+/* line 184, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003184}}
 #lista-archivos .items {
   margin-top: 36px;
 }
-/* line 156, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003156}}
+/* line 188, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003188}}
 #lista-archivos .items table tr td {
   vertical-align: top;
   padding: 0;
   margin: 0;
 }
-/* line 162, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003162}}
+/* line 194, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003194}}
 #menu-lateral {
+  margin-left: 10px;
+  margin-top: -25px;
   /*    height: 468px;
         padding-left: 13px;*/
 }
-/* line 168, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003168}}
+/* line 201, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003201}}
 .listas_asignacion {
   border-radius: 4px 4px 4px 4px;
   -moz-border-radius: 4px 4px 4px 4px;
@@ -210,10 +249,10 @@ div.view {
   border: 3px solid #858285;
   padding: 5px;
 }
-/* line 177, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003177}}
+/* line 210, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003210}}
 .header-busquedas {
-  background-color: #005DC7;
+  background-color: #7B507B;
   border: medium none;
   border-radius: 3px;
   color: #FFFFFF;
@@ -226,14 +265,59 @@ div.view {
   text-decoration: none;
   width: 110%;
 }
-/* line 193, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003193}}
+/* line 226, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003226}}
 .fechas-busqueda {
   padding-bottom: 14px;
   padding-left: 17px;
 }
-/* line 198, /var/www/AppDocumental/css/template.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003198}}
+/* line 231, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003231}}
 .busquedas {
   padding-top: 43px;
+}
+/* line 235, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003235}}
+div.form {
+  margin-top: 6em;
+}
+/* line 239, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003239}}
+.nav-list > .active > a,
+.nav-list > .active > a:hover,
+.nav-list > .active > a:focus {
+  background-color: #7B507B;
+}
+/* line 243, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003243}}
+thead th {
+  background: none repeat scroll 0 0 #CDCDCD;
+}
+/* line 247, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003247}}
+.nav-pills > li > a {
+  color: #7B507B !important;
+}
+/* line 251, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003251}}
+.navbar-inverse .NoAppBrand {
+  background: none;
+  padding: 0;
+  margin-left: 7em;
+}
+/* line 255, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003255}}
+.navbar-inverse .NoAppBrand img {
+  max-width: 85%;
+}
+/* line 260, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003260}}
+#busqueda-noticias {
+  width: 12.7em;
+}
+/* line 264, /var/www/AppDocumental/css/template.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/AppDocumental\/css\/template\.less}line{font-family:\00003264}}
+table.detail-view tr.odd {
+  background: none repeat scroll 0 0 #7B447B;
+  color: #FFFFFF;
 }
