--- a/css/template.less
+++ b/css/template.less
@@ -14,6 +14,18 @@ body{
     font-weight: normal;
 }
 
+a{
+    color: #7B507B;
+}
+
+h1{
+    text-align: center;
+}
+
+#logon-form, #pwdrcv-form {
+     margin: 3em;
+}
+
 .grid-view {
     .button-column{ 
         width: 53px !important; 
@@ -30,20 +42,28 @@ body{
 
 
 .navbar-inverse .navbar-inner{
-    padding-top: 13px;
-    background:url(../images/iconos/icono-fondo-menu.png) repeat;
+   // padding-top: 7px;
+    background:url(../images/iconos/heaad.png) no-repeat;
+    background-size: auto auto;
+    border-color: #FFFFFF;
 }
 
+.navbar-inverse .brand .logo-content{
+    
+}
 .navbar-inverse .brand {
-    background:url(../images/logo2.png) no-repeat;
-    padding-bottom: 44px;
-    padding-left: 117px;
+    background-color: #7B507B;
+    margin: none;
+    position: absolute;
+    margin-left: 4em;
+    padding: 19px 16px 36px;
 
 }
 
 .navbar .nav{
     height: 67px; 
     margin-top: -13px;
+    margin-left: 22em;
 }
 
 .navbar .nav > li{
@@ -62,15 +82,25 @@ body{
     color: whitesmoke;
 }
 .navbar .nav li.active a{
-    color: #005580;
-    background-color: #A3A3A3;
+    color: #7B507B;
+    background-color: #FFFFFF;
+    border-color: #FFFFFF;
     /* RGBa with 0.6 opacity */ 
-    background: rgba(38, 63, 69, 0.6);
+    //background: rgba(38, 63, 69, 0.6);
 }
 
 .menu_ingreso.menu_entrar > a, .menu_salir >a,  .menu_usuarios > a{
     margin: -31px;
     font: larger sans-serif; font-weight: normal !important;
+}
+
+.navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus{
+    background-color: #FFFFFF;
+}
+
+.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus{
+    background-color: #FFFFFF;
+    color: #7B507B  ;
 }
 
 .navbar .nav li.active{
@@ -80,16 +110,16 @@ body{
 
 .menu_entrar{
     padding-left: 28em;
-    padding-top: 11px !important;
+    padding-top: 27px !important;
 }
 
 .menu_salir{
-    padding-left: 16em;
-    padding-top: 11px !important;
+    padding-left: 11em;
+    padding-top: 23px !important;
 }
 .menu_usuarios{
-    padding-left: 3em;
-    padding-top: 11px !important;
+     padding-left: 3em;
+    padding-top: 23px !important;
 }
 
 .breadcrumb{
@@ -97,7 +127,7 @@ body{
 }
 
 #titulos-cabecera{
-    color: #0088CC;
+    color: #7B507B;
 
 }
 
@@ -118,7 +148,7 @@ body{
 }
 
 #lista-archivos .summary{
-    color: #0088CC;
+    color: #7B507B;
     font-weight: bold;
 }
 
@@ -137,6 +167,8 @@ body{
 
 #content {
     margin-bottom: 3em;
+    padding:none;
+    padding-right: 2em;
 
 }
 .seccion-1{
@@ -160,7 +192,8 @@ div.view {
 }
 
 #menu-lateral{
-
+    margin-left: 10px;
+     margin-top: -25px;
     /*    height: 468px;
         padding-left: 13px;*/
 }
@@ -175,7 +208,7 @@ div.view {
 
 
 .header-busquedas{
-    background-color: #005DC7;
+    background-color: #7B507B;
     border: medium none;
     border-radius: 3px;
     color: #FFFFFF;
@@ -198,3 +231,40 @@ div.view {
 .busquedas {
     padding-top: 43px;
 }
+
+div.form{
+    margin-top: 6em;
+}
+
+.nav-list > .active > a, .nav-list > .active > a:hover, .nav-list > .active > a:focus{
+    background-color: #7B507B;
+}
+
+thead th{
+     background: none repeat scroll 0 0 #CDCDCD;
+}
+
+.nav-pills > li > a{
+    color: #7B507B !important;
+}
+
+.navbar-inverse .NoAppBrand{
+    background: none;
+    padding: 0;
+    margin-left: 7em;
+    img{
+        max-width: 85%;
+    }
+}
+
+#busqueda-noticias {
+    width: 12.7em;
+}
+
+table.detail-view tr.odd{
+    background: none repeat scroll 0 0 #7B447B;
+    color: #FFFFFF;
+}
+
+
+
