--- a/css/template.less
+++ b/css/template.less
@@ -266,5 +266,38 @@ table.detail-view tr.odd{
     color: #FFFFFF;
 }
 
+.inicio-dia{
+    background-color: #BDBDBD;
+    font-size: 2em;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    text-align: center;
+    color: #000000;
+    font-weight: bold;
+}
+.content-dia{
+    width: 4em !important;
+}
 
+.inicio-mes {
+    background-color: #000000;
+    color: #FFFFFF;
+    font-weight: bold;
+    margin-top: -10px;
+    text-align: center;
+}
+.header-indicadores{
+    background-color: #7B507B;
+    border: medium none;
+    border-radius: 3px;
+    color: #FFFFFF;
+    display: block;
+    font-weight: bold;
+    margin-bottom: 4%;
+    margin-top: inherit;
+    padding: 6px;
+    text-align: center;
+    text-decoration: none;
+    width: 110%;
+}
 
