--- a/css/template.less
+++ b/css/template.less
@@ -350,3 +350,7 @@ table tr.selected{
 #lista-noticias{
     margin-left: 42px;
 }
+
+.table.detail-view tr.odd{
+    background: none repeat scroll 0 0 #7b507b;
+}
