--- a/css/template.less
+++ b/css/template.less
@@ -352,5 +352,5 @@ table tr.selected{
 }
 
 .table.detail-view tr.odd{
-    background: none repeat scroll 0 0 #7b507b;
+    background: none repeat scroll 0 0 #7b507b !important;
 }
