--- a/css/template.less
+++ b/css/template.less
@@ -263,7 +263,7 @@ thead th{
 }
 
 table tr.odd{
-    background: none repeat scroll 0 0 #7B447B;
+    background: none repeat scroll 0 0 #7B447B !important;
     color: #FFFFFF;
     a{
         color: #FFFFFF;
