--- a/css/template.less
+++ b/css/template.less
@@ -8,9 +8,9 @@ and open the template in the editor.
     Author     : oskar
 */ 
 body{
-    color: #68737F;
-    font-family: 'Roboto',sans-serif;
-    font-size: 13px;
+    color: #393939;
+    font-family: "roboto_slabregular";
+    font-size: 13.5px;
     font-weight: normal;
 }
 
@@ -56,12 +56,22 @@ h1{
     margin: none;
     position: absolute;
     margin-left: 2em;
-    padding: 19px 16px 36px;
-
+    padding: 10px 16px 6px;
 }
-
+.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container{
+  //  width: 1200px;
+}
+.container{
+    
+}
+#sidebar{
+    margin-top: 39px;
+}
+.carousel{
+    margin-top: 46px;
+}
 .navbar .nav{
-    height: 67px; 
+    //height: 67px; 
     margin-top: -13px;
     margin-left: 16em;
 }
@@ -80,6 +90,7 @@ h1{
 }
 .navbar .nav li a{
     color: whitesmoke;
+    font-size: 13px; 
 }
 .navbar .nav li.active a{
     color: #7B507B;
@@ -88,10 +99,31 @@ h1{
     /* RGBa with 0.6 opacity */ 
     //background: rgba(38, 63, 69, 0.6);
 }
+.navbar-inverse .navbar-inner{
+    border-color: none;
+   
+}
+
+.navbar-inverse .navbar-inner{
+     border-color: none;
+}
+
+.navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner{
+    box-shadow: none;
+}
+
+.navbar-inner{
+    border: none;
+}
+
+.navbar-inverse .navbar-inner{
+    
+}
 
 .menu_ingreso.menu_entrar > a, .menu_salir >a,  .menu_usuarios > a{
-    margin: -31px;
-    font: larger sans-serif; font-weight: normal !important;
+   
+    font: 900 larger sans-serif;
+    text-transform: uppercase;
 }
 
 .navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus{
@@ -109,21 +141,21 @@ h1{
 }
 
 .menu_entrar{
-    padding-left: 28em;
-    padding-top: 27px !important;
+/*    padding-left: 28em;
+    padding-top: 27px !important;*/
 }
 
 .menu_salir{
-    padding-left: 7em;
-    padding-top: 23px !important;
+/*    padding-left: 7em;
+    padding-top: 23px !important;*/
 }
 .menu_usuarios{
-     padding-left: 3em;
-    padding-top: 23px !important;
+/*     padding-left: 3em;
+    padding-top: 23px !important;*/
 }
 
 .breadcrumb{
-    margin: 23px 0 20px;
+    margin: 53px 0 20px;
 }
 
 #titulos-cabecera{
@@ -158,10 +190,9 @@ h1{
 }
 #footer{
     border: none;
-    position:fixed;
     bottom:0;
     width:97%;
-    height:34px;            /* Altura del footer */
+    height:51px;            /* Altura del footer */
     background-color:#CDCDCD;
     font-weight: bold;
 }
@@ -220,7 +251,7 @@ div.view {
     padding: 6px;
     text-align: center;
     text-decoration: none;
-    width: 110%;
+    width: 118%;
 }
 
 
@@ -338,13 +369,13 @@ table tr.selected{
 }
 
 .fron-image {
-    border: 2px inset;
-    padding: 20px;
+   
 }
 
 .fron-descripcion{
     margin-top: 5px;
     margin-bottom: 2px;
+    height: 194px;
 }
 
 #lista-noticias{
@@ -354,3 +385,41 @@ table tr.selected{
 .table.detail-view tr.odd{
     background: none repeat scroll 0 0 #7b507b !important;
 }
+
+#header{
+    display: none;
+}
+
+#bgBody {
+    a{
+        display: none;
+    }
+}
+.navbar.navbar-inverse.navbar-fixed-top{
+    border: none;
+}
+
+.file-tree{color:inherit}.file-tree a{color:inherit;text-decoration:none}.file-tree a:hover{color:inherit}.file-tree .placeholder{margin-left:10px!important;border:1px solid #428bca}.file-tree ol.tree{padding:0;margin:0;list-style-type:none;border-left:none}.file-tree ol.tree ol{padding:0;margin:0 0 0 30px;list-style-type:none}.file-tree ol.tree li{position:relative;padding:0;margin:0}.file-tree ol.tree li div{margin:0;line-height:26px;cursor:pointer}.file-tree ol.tree li.folder>div>span{padding-right:8px;padding-left:15px;cursor:pointer}.file-tree ol.tree li.folder>div>span:before{font-family:'Glyphicons Halflings';content:"\e117"}.file-tree ol.tree li.folder.mjs-nestedSortable-expanded>div>span:before{font-family:'Glyphicons Halflings';content:"\e118"}.file-tree ol.tree li.folder.selected>div{color:#fff;background:#428bca}.file-tree ol.tree li.file>div>a>span,.file-tree ol.tree li.file>div>span{padding-right:8px}.file-tree ol.tree li.file>div>a>span:before,.file-tree ol.tree li.file>div>span:before{padding-left:15px;font-family:'Glyphicons Halflings';content:"\e022"}.file-tree ol.tree li.file.selected>div{color:#fff;background:#428bca}.file-tree ol.tree li.mjs-nestedSortable-collapsed>ol{display:none}.file-tree.sortable ol.tree li.file>div>a>span,.file-tree.sortable ol.tree li.file>div>span,.file-tree.sortable ol.tree li.folder>div>span{cursor:move}
+
+#lista-archivos .summary{
+    display: none;
+}
+    /* Large desktop */
+    @media (min-width: 1200px) { 
+        
+    }
+     
+    /* Portrait tablet to landscape and desktop */
+    @media (min-width: 768px) and (max-width: 979px) { 
+       
+    }
+     
+    /* Landscape phone to portrait tablet */
+    @media (max-width: 767px) { 
+       
+    }
+     
+    /* Landscape phones and down */
+    @media (max-width: 480px) { 
+       
+    }
