--- a/css/template.less
+++ b/css/template.less
@@ -43,7 +43,7 @@ h1{
 
 .navbar-inverse .navbar-inner{
    // padding-top: 7px;
-    background:url(../images/iconos/heaad.png) no-repeat;
+    background:#7b507b;
     background-size: auto auto;
     border-color: #FFFFFF;
 }
